# OmniAgent-AI

./: .env  .env.example  .gitignore  ADVANCED_FEATURES.md  ADVANCED_TOOLS_REPORT.md  ARCHITECTURE.md  ASSISTANT_IMPLEMENTATION.md  BUG_FIX_REPORT.md  CITATION_VALIDATION_REPORT.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  DELIVERY_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  EXECUTIVE_SUMMARY.md  FILE_SUMMARY.md  FRONTEND_RELIABILITY_REPORT.md  HYBRID_KNOWLEDGE_ENGINE_REPORT.md  IMPLEMENTATION_STATUS.md  INDEX.md  OMEGA_INFINITY_AUDIT_REPORT.md  OMEGA_UPGRADE_REPORT.md  PRE_DEPLOYMENT_CHECKLIST.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READINESS_SUMMARY.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_ADVANCED_TOOLS - Copy.md  README_v2.md  RETRIEVAL_AUDIT_REPORT.md  SESSION_STATUS_REPORT.md  SETUP.md  START_HERE_DEPLOYMENT.md  SYSTEM_OVERVIEW.md  TESTING_GUIDE - Copy.md  TITAN_OMEGA_INFINITY_AUDIT_REPORT.md  TOOLS_QUICK_START.md  VERIFICATION_CHECKLIST - Copy.md  (+19 more)
Backend/: main.py  (+3 more)
omniagent-ai/backend/: .env.example  .env.production  DATABASE_SETUP_GUIDE.md  Dockerfile  alembic.ini  check_password.py  check_schema.py  create_proper_test_user.py  create_test_user.py  debug_auth.py  diagnose_chat.py  init_and_run.py  list_users.py  mark_migration.py  migrate_schema.py  pyproject.toml  run_server.py  setup_production.py  start_production.ps1  start_production.sh  start_rq_worker.py  test.db  test_assistant_api.py  test_auth_flow.py  test_chat_mock.py  test_complete_auth.py  test_document_retrieval.py  test_full_auth.py  test_hash.py  validate_features.py  verify_optimizations.py  verify_production_ready.py
omniagent-ai/backend/alembic/: env.py
omniagent-ai/backend/alembic/versions/: 001_add_document_fields.py  (+4 more)
omniagent-ai/backend/app/: cache.py  config.py  config_production.py  deps.py  logging_conf.py  main.py  metrics.py
omniagent-ai/backend/scripts/: generate_all_reports.py  validate_memory_summarize.py
omniagent-ai/backend/tests/: conftest.py  test_admin_api.py  test_advanced_tools_api.py  test_agents.py  test_agents_full.py  test_ai_service.py  test_api_integration.py  test_api_routes_bulk.py  test_auth.py  test_chat.py  test_chat_api_coverage.py  test_coverage_boost.py  test_deep_research.py  test_document_api_bulk.py  test_e2e_ingest_and_retrieve.py  test_failure_recovery.py  test_failure_resilience.py  test_fast_chat_coverage.py  test_features.py  test_features_api_bulk.py  test_hybrid_knowledge_engine.py  test_ingest_extraction.py  test_model_router_web_search.py  test_modules_extended.py  test_rag.py  test_rag_advanced.py  test_rag_quality.py  test_readiness_security.py  test_remaining_coverage.py  test_retrieval_pipeline.py  test_safety_guard.py  test_security.py  test_security_audit.py  test_services_extended.py  test_services_robust.py  test_services_unit.py  test_tools.py  test_upload_pipeline.py  test_utils_coverage.py
(+303 files in other folders)
