[project]
name = "omniagent-backend"
version = "2.0.0"
description = "Production-ready AI agent platform with RAG, memory, and task automation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]==0.30.6",
  "gunicorn==23.0.0",
  "sqlmodel==0.0.22",
  "psycopg2-binary==2.9.9",
  "alembic==1.13.2",
  "pydantic[email]==2.9.2",
  "pydantic-settings==2.5.2",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "python-multipart>=0.0.9",
  "httpx==0.27.2",
  "redis==5.0.8",
  "rq==1.16.2",
  "chromadb==1.5.9",
  "langgraph==0.2.34",
  "langchain-core==0.3.10",
  "pypdf>=5.0.0",
  "pdfplumber==0.11.0",
  "python-docx==1.1.2",
  "python-pptx==1.0.2",
  "pandas==2.2.3",
  "openpyxl==3.1.5",
  "pytesseract==0.3.13",
  "Pillow==11.1.0",
  "markdown-it-py==3.0.0",
  "tenacity>=8.5.0,<9.0.0",
  "structlog==24.4.0",
  "orjson==3.10.7",
  "python-dotenv>=1.0.1",
  "websockets==14.1",
  "faiss-cpu==1.8.0",
  "numpy==1.26.4",
  "celery==5.3.4",
  "psutil>=6.1.0",
  "aiofiles==24.1.0",
  "slowapi==0.1.9",
  "openai>=1.0.0",
  "duckduckgo-search>=6.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "httpx==0.27.2",
  "ruff==0.6.9",
  "pytest-cov==5.0.0",
  "black==24.4.2",
  "mypy==1.11.2"
]

production = [
  "sentry-sdk==1.45.0",
  "prometheus-client==0.21.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "N", "UP", "I", "C4", "B", "A"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "app/api/v1/debug.py",
    "app/config_production.py",
    "app/tools/notes.py",
    "app/tools/file_summarizer.py",
    "app/tools/web_search.py",
    "app/services/sharing_faq_service.py",
    "app/services/tagging_service.py",
    "app/services/fast_chat_service.py",
    "app/rag/ingest.py",
    "app/rag/retriever.py",
    "app/services/ai/service.py",
    "app/llm/ollama_client.py",
    "app/memory/long_term.py",
    "app/services/ai/gemini_provider.py",
    "app/services/ai/provider.py",
    "app/services/document_service.py",
    "app/core/security_checks.py",
    "app/db/init_db.py",
    "app/db/session.py",
    "app/deps.py",
    "app/api/deps.py",
    "app/api/v1/admin.py",
    "app/api/v1/features.py",
    "app/api/v1/health.py",
    "app/core/exceptions.py",
    "app/repositories/base.py",
    "app/repositories/conversation_repo.py",
    "app/repositories/task_repo.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]